--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,16 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1260px;
   padding: 0 45px;
   margin: 0 auto;
   height: 100%;
+}
+
+.container__title {
+  font-family: 'Barlow';
+  font-weight: 700;
+  font-size: 25px;
 }
 
 .main__sliderBanner {
@@ -513,26 +519,25 @@ body {
   margin-top: 80px;
 }
 
-.popular__title {
-  font-family: 'Barlow';
-  font-weight: 700;
-  font-size: 25px;
+.popular__inner {
+  display: flex;
+  flex-direction: column;
 }
 
-.popular__filter-box {
+.filter-box {
   display: flex;
   margin-top: 25px;
 }
 
-.popular__filter-item {
+.filter-item {
   margin-right: 50px;
 }
 
-.popular__filter-item:last-child {
+.filter-item:last-child {
   margin-right: 0;
 }
 
-.popular__filter-btn {
+.filter-btn {
   background: none;
   font-weight: 500;
   font-size: 15px;
@@ -540,11 +545,11 @@ body {
   line-height: 1.8;
 }
 
-.popular__filter-btn:hover {
+.filter-btn:hover {
   text-shadow: 0 0 .8px #333, 0 0 .8px #333;
 }
 
-.popular__filter-btn::after {
+.filter-btn::after {
   content: '';
   left: 0;
   bottom: -10px;
@@ -555,40 +560,41 @@ body {
   transition: all 0.3s;
 }
 
-.popular__filter-btn--active {
+.filter-btn--active {
   border-bottom: 3px solid #1C62CD;
 }
 
-.popular__cardList-wrapper {
+.cardList-wrapper {
   position: relative;
+  margin: 25px -15px 0px;
 }
 
-.popular__cardList {
+.cardList {
   display: flex;
   margin: 35px -15px 0px;
 }
 
-.popular__card {
+.card {
   border: 1px solid #CDCDCD;
   border-radius: 3px;
   margin: 0 15px;
   position: relative;
 }
 
-.popular__card-link {
+.card-link {
   position: relative;
 }
 
-.popular__card-link:hover {
+.card-link:hover {
   cursor: pointer;
   box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
 }
-.popular__card-link:hover .popular__card-discription,
-.popular__card-link:hover .popular__card-cost {
+.card-link:hover .card-discription,
+.card-link:hover .card-cost {
   color: #1C62CD;
 }
 
-.popular__card-link::before {
+.card-link::before {
   position: absolute;
   content: 'посмотреть товар';
   top: 140px;
@@ -607,11 +613,11 @@ body {
   transition: all 0.3s;
 }
 
-.popular__card-link:hover::before {
+.card-link:hover::before {
   opacity: 0.9;
 }
 
-.popular__card-saleBanner {
+.card-saleBanner {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -620,10 +626,10 @@ body {
   background-color: #1C62CD;
   visibility: hidden;
 }
-.popular__card-saleBanner--activ {
+.card-saleBanner--activ {
   visibility: visible;
 }
-.popular__card-saleBanner p {
+.card-saleBanner p {
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 0.07em;
@@ -631,39 +637,33 @@ body {
   text-transform: uppercase;
 }
 
-.popular__card-like {
-  position: absolute;
-  top: 16px;
-  right: 19px;
-}
-
-.popular__card-like {
+.card-like {
   position: absolute;
   top: 16px;
   right: 19px;
   background: transparent;
 }
 
-.popular__card-like--active {
+.card-like--active {
   background: url("../images/heartBlue.svg") no-repeat;
 }
-.popular__card-like--active svg path {
+.card-like--active svg path {
   fill: #1C62CD;
 }
 
-.popular__card-imgBox {
+.card-imgBox {
   margin: 26px auto 0;
   width: 80%;
   height: 200px;
 }
 
-.popular__card-imgBox img {
+.card-imgBox img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-.popular__card-discription {
+.card-discription {
   display: block;
   max-width: 230px;
   margin: 14px auto 0px;
@@ -673,10 +673,11 @@ body {
   text-align: center;
   max-width: 80%;
   max-height: 45px;
+  min-height: 42px;
   overflow: hidden;
 }
 
-.popular__card-cost-wrapper {
+.card-cost-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -684,21 +685,21 @@ body {
   position: relative;
 }
 
-.popular__card-cost-wrapper::after {
+.card-cost-wrapper::after {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-.popular__card-cost {
+.card-cost {
   font-weight: 700;
   font-size: 30px;
   margin: 25px auto 40px;
   white-space: nowrap;
 }
 
-.popular__card-basket {
+.card-basket {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -708,11 +709,11 @@ body {
   border-radius: 10px 0px 0px 0px;
 }
 
-.popular__card-basket svg path {
+.card-basket svg path {
   fill: #fff;
 }
 
-.popular__card-productAbsent {
+.card-productAbsent {
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -725,16 +726,16 @@ body {
   display: none;
 }
 
-.popular__card-productAbsent--visible {
+.card-productAbsent--visible {
   display: flex;
 }
 
-.popular__card-productAbsent-text {
+.card-productAbsent-text {
   font-weight: 700;
   font-size: 18px;
 }
 
-.popular__card-productAbsent-link {
+.card-productAbsent-link {
   font-weight: 400;
   font-size: 16px;
   color: #1C62CD;
@@ -744,11 +745,11 @@ body {
   margin-top: 13px;
 }
 
-.popular__card-productAbsent-link:hover {
+.card-productAbsent-link:hover {
   scale: 1.1;
 }
 
-.popular__cardList-prev {
+.cardList-prev {
   position: absolute;
   top: 50%;
   left: -45px;
@@ -756,11 +757,67 @@ body {
   margin-left: 10px;
 }
 
-.popular__cardList-next {
+.cardList-next {
   position: absolute;
   top: 50%;
   right: -45px;
   transform: translateY(-50%);
+}
+
+.popular__addButton {
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  margin: 52px auto 0px;
+  padding: 17px 43px;
+  background-color: #F0F0F4;
+}
+
+/*---------------bannerDiscount-----------------------------*/
+/*---------------bannerDiscount-----------------------------*/
+.bannerDiscount {
+  margin-top: 86px;
+}
+.bannerDiscount__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1C62CD;
+}
+.bannerDiscount__imgBox {
+  margin-left: 70px;
+  display: flex;
+}
+.bannerDiscount__imgBox img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.bannerDiscount__discription {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1;
+  color: #FFFFFF;
+  margin: 28px auto;
+  width: 26%;
+}
+.bannerDiscount__button {
+  margin-right: 123px;
+  width: fit-content;
+  height: fit-content;
+  font-weight: 500;
+  font-size: 24px;
+  padding: 20px 40px;
+  white-space: nowrap;
+  background-color: #FFFFFF;
+}
+
+/*---------------additionalItem-----------------------------*/
+/*---------------additionalItem-----------------------------*/
+.additionalItem {
+  margin-top: 72px;
 }
 
 /*# sourceMappingURL=style.css.map */
